# rcm-python

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml  rcm_api.py  rcm_backend_core.py
.github/workflows/: deploy-oracle.yml  test.yml
deploy/oracle/: README.md  enable_https.sh  install_ubuntu.sh  nginx-rcm.conf  package_windows.ps1  rcm-api.service.template
examples/rung12/: rung12.xyz  rung12_probes.csv  rung12_shifts.csv  rung12connectivity.csv
frontend/rcm/: app.js  config.js  index.html  styles.css
src/rcm_python/: __init__.py  core.py  examples.py  field.py  io.py
tests/: test_api.py  test_core_components.py  test_field_kernel.py  test_io.py  test_rung12.py  test_synthetic_loop.py
